syntax = "proto3";

option csharp_namespace = "KafkaBlobChunking";

message KafkaTopicPartitionOffset {
    string Topic = 1;
    int32 Partition = 2;
    int64 Offset = 3;
}

message KafkaNumberOfChunksPerTopicPartition {
    string Topic = 1;
    int32 Partition = 2;
    uint64 NumberOfChunks = 3;
}

message BlobChunksMetadata {
    string BlobId = 1;
    repeated .KafkaTopicPartitionOffset ChunksTopicPartitionOffsetsEarliest = 2;
    repeated .KafkaTopicPartitionOffset ChunksTopicPartitionOffsetsLatest = 3;
    repeated .KafkaNumberOfChunksPerTopicPartition ChunksPerTopicPartitionCount = 4;
    uint64 TotalNumberOfChunks = 5;
    uint64 CompleteBlobTotalNumberOfBytes = 6;
    string FinalChecksum = 7;
    string BlobSchemaSubject = 8;
    string BlobSchemaVersion = 9;
}
